# DesktopApp-Ubuntu-Glade

./: Makefile  Makefile.am  Makefile.in  admin_user.glade.bak  admin_user.gladep.bak  config.h  config.status  configure  configure.in
autom4te.cache/: output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: CRUD.c  CRUD.h  Makefile  Makefile.am  Makefile.in  admin_user  bureau.c  bureau.h  bureau.txt  callbacks.c  callbacks.h  coord.txt  fonction_sami.c  fonction_sami.h  function.c  function.h  interface.c  interface.c.bak  interface.h  liste.txt  liste_aff.txt  log.txt  main.c  reclamation.c  reclamation.h  reclamation.txt
src/.deps/: CRUD.Po  bureau.Po  callbacks.Po  fonction_sami.Po  function.Po  interface.Po  reclamation.Po
